--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/axios": "^0.9.36",
+    "@types/node": "^22.7.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.1",
