--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -5,12 +5,31 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "src",
+    "paths" : {
+      "@/api/*" : ["api/*"],
+      "@/assets/*" : ["assets/*"],
+      "@/components/*" : ["components/*"],
+      "@/constants/*" : ["constants/*"],
+      "@/context/*" : ["context/*"],
+      "@/data/*" : ["data/*"],
+      "@/helpers/*" : ["helpers/*"],
+      "@/hooks/*" : ["hooks/*"],
+      "@/layouts/*" : ["layouts/*"],
+      "@/lib/*" : ["lib/*"],
+      "@/locales/*" : ["locales/*"],
+      "@/reducer/*" : ["reducer/*"],
+      "@/services/*" : ["services/*"],
+      "@/types/*" : ["types/*"],
+      "@/utils/*" : ["utils/*"],
+      "@/views/*" : ["views/*"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
 
